@@ -1,6 +1,12 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2004 Gentoo Technologies, Inc.
-# $Header: /var/cvsroot/gentoo/src/installer/src/fe/gtk/ChangeLog,v 1.228 2006/06/24 21:38:18 agaffney Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/src/fe/gtk/ChangeLog,v 1.229 2006/08/04 03:13:19 agaffney Exp $
+
+  3 Aug 2006; Andrew Gaffney <agaffney@gentoo.org>
+  src/fe/gtk/RunInstall.py, src/fe/gtk/gtkfe.py:
+  ask user if they really want to exit with X in corner clicked
+
+*GLI-gtk-0.4 (31 Jul 2006)
 
   24 Jun 2006; Andrew Gaffney <agaffney@gentoo.org>
   src/fe/gtk/Kernel.py:
